--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ requires-python = "==3.11.*"
 readme = "README.md"
 license = {text = "MIT"}
 
+[project.scripts]
+pp = fishregression.cli:predict
 
 [tool.pdm]
 distribution = false
