--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,16 +6,16 @@ authors = [
     {name = "tbongkim03", email = "tbongkim03@gmial.com"},
 ]
 dependencies = [
-    "scikit-learn>=1.5.1",
-    "uvicorn[standard]>=0.30.6",
-    "sklearn>=0.0.post12",
 ]
 requires-python = "==3.11.*"
 readme = "README.md"
 license = {text = "MIT"}
 
 [project.scripts]
-pp = fishregression.cli:predict
+pp = "fishregression.cli:predict"
+
+[tool.pytest.ini_options]
+pythonpath = ["src/", "."]
 
 [tool.pdm]
 distribution = false
