--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ authors = [
     {name = "tbongkim03", email = "tbongkim03@gmial.com"},
 ]
 dependencies = [
+    "sympy>=1.13.2",
 ]
 requires-python = "==3.11.*"
 readme = "README.md"
