--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,9 @@ authors = [
 ]
 dependencies = [
     "sympy>=1.13.2",
+    "uvicorn[standard]>=0.30.6",
+    "fastapi>=0.114.0",
+    "scikit-learn>=1.5.1",
 ]
 requires-python = "==3.11.*"
 readme = "README.md"
@@ -19,7 +22,7 @@ pp = "fishregression.cli:predict"
 pythonpath = ["src/", "."]
 
 [tool.pdm]
-distribution = false
+distribution = true
 
 [tool.pdm.dev-dependencies]
 test = [
