--- a/LB/default.conf
+++ b/LB/default.conf
@@ -1,12 +1,26 @@
-upstream fish_servers {
-    server 43.200.254.190:8080;
-    server 43.200.254.190:8081;
+server_names_hash_bucket_size 128;
+
+server {
+    listen 80;
+    server_name 43.203.225.43;
+
+    # sudo docker run -d -p 8001:8080 --name lr_serv <IMAGE>
+    location /lr {
+        proxy_pass http://172.17.0.1:8001/;
+    }
+
+    # sudo docker run -d -p 8002:8080 --name knn_serv <IMAGE>
+    location /knn {
+        proxy_pass http://172.17.0.1:8003/;
+    }
 }
 
 server {
     listen 80;
+    server_name ec2-43-200-254-190.ap-northeast-2.compute.amazonaws.com;
 
     location / {
-        proxy_pass http://fish_servers;
+        proxy_pass http://172.17.0.1:8001/;
     }
 }
+
