--- a/LB/default.conf
+++ b/LB/default.conf
@@ -5,12 +5,12 @@ server {
     server_name 43.203.225.43;
 
     # sudo docker run -d -p 8001:8080 --name lr_serv <IMAGE>
-    location /lr {
+    location /weight/ {
         proxy_pass http://172.17.0.1:8001/;
     }
 
     # sudo docker run -d -p 8002:8080 --name knn_serv <IMAGE>
-    location /knn {
+    location /fish/ {
         proxy_pass http://172.17.0.1:8003/;
     }
 }
